@@ -1,9 +1,10 @@
 hhm (HTML Help Maker) -- make an ITS file and in the future a CHM file
-Copyright (C) 2002,2005 Paul Wise, <pabs@zip.to>
+Copyright (C) 2002, 2005, 2006 Paul Wise
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
-the Free Software Foundation; version 2 only
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
