@@ -1,3 +1,7 @@
+Tue, 22 Aug 2006 14:02:11 +0800 Paul Wise <pabs3@bonedaddy.net>
+
+	* README, hhm.c: Update copyright/licencing information
+
 Mon, 07 Aug 2006 19:04:00 +0800 Paul Wise <pabs@zip.to>
 
 	* hhm.c: Apply patch by Patrice Dumas to reduce gcc warnings
